# obs-studio

./: .gitignore  CMakeLists.txt
UI/: CMakeLists.txt  obs-app.cpp
UI/cmake/: feature-macos-update.cmake  legacy.cmake  os-linux.cmake  os-windows.cmake
UI/frontend-plugins/aja-output-ui/: CMakeLists.txt
UI/frontend-plugins/aja-output-ui/cmake/: legacy.cmake
UI/frontend-plugins/decklink-captions/cmake/: legacy.cmake
UI/frontend-plugins/decklink-output-ui/: CMakeLists.txt
UI/frontend-plugins/decklink-output-ui/cmake/: legacy.cmake
UI/frontend-plugins/frontend-tools/: CMakeLists.txt
UI/frontend-plugins/frontend-tools/cmake/: legacy.cmake
UI/obs-frontend-api/cmake/: legacy.cmake
UI/win-update/updater/: CMakeLists.txt
UI/win-update/updater/cmake/: legacy.cmake
UI/xdg-data/: CMakeLists.txt
cmake/Modules/: CompilerConfig.cmake  CopyMSVCBins.cmake  FindDetours.cmake  FindFFmpeg.cmake  FindJansson.cmake  FindLibVLC.cmake  FindLibfdk.cmake  FindLibrist.cmake  FindLibrnnoise.cmake  FindLibspeexdsp.cmake  FindLibsrt.cmake  FindLibx264.cmake  FindLuajit.cmake  FindMbedTLS.cmake  FindSwigWindows.cmake  ObsDefaults_Linux.cmake  ObsDefaults_Windows.cmake  ObsDefaults_macOS.cmake  ObsHelpers_Windows.cmake  ObsHelpers_macOS.cmake  VersionConfig.cmake
cmake/common/: bootstrap.cmake  buildnumber.cmake  versionconfig.cmake
cmake/macos/: defaults.cmake  xcode.cmake
libobs/: CMakeLists.txt
libobs-d3d11/: CMakeLists.txt
libobs-opengl/: CMakeLists.txt  gl-windows.c
libobs-opengl/cmake/: legacy.cmake
libobs/cmake/: legacy.cmake
plugins/aja/cmake/: legacy.cmake
plugins/coreaudio-encoder/cmake/: legacy.cmake
plugins/decklink/cmake/: legacy.cmake
plugins/image-source/cmake/: legacy.cmake
plugins/mac-virtualcam/src/dal-plugin/cmake/: legacy.cmake
plugins/obs-ffmpeg/: CMakeLists.txt  obs-ffmpeg-source.c
plugins/obs-ffmpeg/cmake/: legacy.cmake
plugins/obs-ffmpeg/data/locale/: en-US.ini  zh-CN.ini  zh-TW.ini
plugins/obs-ffmpeg/obs-amf-test/: CMakeLists.txt
plugins/obs-filters/cmake/: legacy.cmake
plugins/obs-outputs/cmake/: legacy.cmake
plugins/obs-qsv11/: CMakeLists.txt
plugins/obs-qsv11/obs-qsv-test/: CMakeLists.txt
plugins/obs-text/: CMakeLists.txt
plugins/obs-transitions/cmake/: legacy.cmake
plugins/obs-x264/: CMakeLists.txt
plugins/obs-x264/cmake/: legacy.cmake
plugins/rtmp-services/: CMakeLists.txt
plugins/rtmp-services/cmake/: legacy.cmake
plugins/text-freetype2/cmake/: legacy.cmake
plugins/vlc-video/cmake/: legacy.cmake
plugins/win-dshow/: CMakeLists.txt  dshow-plugin.cpp  shared-memory-queue.c
plugins/win-dshow/virtualcam-module/: CMakeLists.txt  virtualcam-module.cpp
plugins/win-wasapi/: CMakeLists.txt
